# blaz

./: .env.example  .gitignore  LICENSE  README.md  flake.nix  justfile
.github/workflows/: android.yml  backend.yml  ci.yml  release.yml
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/hellocompose/: MainActivity.kt
android/app/src/main/java/com/example/hellocompose/api/: Api.kt
backend/: .gitignore  Cargo.toml  justfile  prep.db  test_html_check.rs
backend/migrations/: 00001_init_schema.sql  00002_add_recipe_view.sql  00002_add_users.sql  00002_app_settings.sql  00002_drop_settings.sql  00003_add_macros.sql  00003_drop_users.sql  00004_ingredient_normalization_cache.sql  00005_shopping_recipe_tracking.sql  00006_shopping_multi_recipe_tracking.sql  00007_shopping_meal_plan_dates.sql  00008_share_token.sql  00009_prep_reminders.sql  00010_shopping_notes.sql  00011_ingredient_aliases.sql  00012_soft_delete.sql  00013_shopping_categories.sql  00014_settings.sql  0001_create_recipes.sql  0002_create_meal_plan.sql  0003_add_recipe_fields.sql  0005_images_small_full.sql
backend/src/: app.rs  auth_middleware.rs  categories.rs  config.rs  db.rs  embedded_web.rs  error.rs  html.rs  image_io.rs  ingredient_parser.rs  lib.rs  llm.rs  logging.rs  main.rs  models.rs  ntfy.rs  schema_org.rs  tests.rs  units.rs
backend/src/routes/: app_state.rs  auth.rs  auth_meta.rs  categories.rs  import_recipe_images.rs  import_recipesage.rs  llm_credits.rs  meal_plan.rs  mod.rs  parse_recipe.rs  parse_recipe_image.rs  recipes.rs  settings.rs  share_recipe.rs  shopping.rs
backend/tests/: api_blackbox.rs  api_spec.rs
flutter/: README.md  justfile  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/example/blaz/: MainActivity.kt
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/src/: add_recipe_page.dart  api.dart  auth.dart  home_shell.dart  notifications.dart  web_storage_stub.dart  web_storage_web.dart
flutter/lib/src/platform/: kv_store_web.dart
flutter/lib/src/views/: add_recipe_page.dart  app_state_page.dart  categories_page.dart  deleted_recipes_page.dart  edit_recipe_page.dart  login_page.dart  meal_plan_page.dart  recipe_detail_page.dart  recipes_page.dart  shared_recipe_page.dart  shopping_list_page.dart
flutter/lib/src/views/meal_plan/: day_picker_sheet.dart  day_timeline_box.dart  meal_plan_page.dart  recipe_picker_sheet.dart  recipe_thumb_tile.dart
flutter/lib/src/widgets/: app_title.dart  recipe_card.dart  version_checker.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/test/: models_test.dart  parse_ingredient_test.dart  widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
scripts/: release.py
