[package]
name = "blaz"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "json"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
anyhow = "1.0.100"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
webp  = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.19"
url = "2.5.7"
regex = "1.12.1"
once_cell = "1.21.3"
