[package]
name = "blaz"
version = "1.0.9"
edition = "2024"
license = "GPLv3"
authors = ["Mathieu Moalic <blaz@matmoa.eu>"]
description = """
Recipe manager
"""
readme = "../README.md"
documentation = "https://github.com/MathieuMoalic/blaz"
homepage = "https://github.com/MathieuMoalic/blaz"
repository = "https://github.com/MathieuMoalic/blaz"
keywords = ["recipe list"]
categories = ["API backend"]

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "chrono"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "json"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
anyhow = "1.0.100"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
webp  = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.19"
url = "2.5.7"
regex = "1.12.1"
once_cell = "1.21.3"
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
rand = "0.8"
rpassword = "7"
clap = { version = "4.5.53", features = ["derive", "env"] }
tracing-appender = "0.2.4"
base64 = "0.22"
rust-embed = "8.5"
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

